<resources>
    <string name="app_name">WeCare</string>
    <string name="complanant_portal">Complanant Portal</string>
    <string name="system_title">Barangay Complaint Management System</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="redirect_registration">Don\'t have an account? Register.</string>
    <string name="redirect_login">Already have an account? Login.</string>
    <string name="register">Register</string>
    <string name="address">Enter your address</string>
    <string name="phonee_number">Enter your phone number</string>
    <string name="last_name">Enter your last name</string>
    <string name="middle_name">Enter your middle name</string>
    <string name="first_name">Enter your first name</string>
    <string name="registration_form">Registration Form</string>
    <string name="user_profile">profile</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="complaints">Complaints</string>
    <string name="complaint_history">Complaint History</string>
    <string name="logout">Logout\n</string>
    <string name="menu">Menu</string>
    <string name="complaint_overview">Complaint Overview</string>
    <string name="total_complaints">Total Complaints</string>
    <string name="pending">Pending</string>
    <string name="resolved_month">Resolved (Month)</string>
    <string name="in_progress">In Progress</string>
    <string name="recent_active_complaints">Recent Active Complaints</string>
    <string name="recently_resolved">Recently Resolved</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="description">Description</string>
    <string name="complaint_title">Complaint Title</string>
</resources>