<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:background="#1976D2"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:background="#1976D2"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/nav_complaints"
        android:icon="@drawable/ic_complaint"
        android:background="#1976D2"
        android:title="@string/complaints" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:background="#1976D2"
        android:title="@string/complaint_history" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:background="#1976D2"
        android:title="@string/logout" />
</menu>
