<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/registrationCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:elevation="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="97dp">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_wecare_logo" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/registration_form"
                android:textColor="#1976D2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/system_title"
                android:textColor="#757575"
                android:textSize="14sp" />

            <!-- First Name -->
            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <!-- Middle Name -->
            <EditText
                android:id="@+id/middleNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/middle_name"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <!-- Last Name -->
            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <!-- Email -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <!-- Password -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <!-- Phone Number -->
            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/phonee_number"
                android:inputType="phone"
                android:padding="12dp" />

            <!-- Address -->
            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/address"
                android:padding="12dp" />

            <!-- Register Button -->

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#1976D2"
                android:padding="12dp"
                android:text="@string/register"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/redirect_login"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>